# multi-agent-platform

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
agent_core/base/: agent.py
agent_core/interfaces/: plugin.py  tool.py
agent_core/models/: __init__.py  agent.py  message.py
agent_core/registry/: agent_registry.py  tool_registry.py
agent_core/utils/: logging.py
config/: settings.py
memory_service/models/: context.py
tests/agent_core/base/: test_agent.py
tests/agent_core/interfaces/: test_plugin.py  test_tool.py
tests/agent_core/registry/: test_agent_registry.py  test_tool_registry.py
tests/agent_core/utils/: test_logging.py
tests/config/: test_settings.py
tests/models/: test_agent.py  test_context.py  test_message.py  test_task.py
workflow_engine/models/: task.py
