[tool.poetry]
name = "multi-agent-platform"
version = "0.1.0"
description = "Multi-Agent AI System with Orchestration & Memory"
authors = ["Victor-Andrei <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.1"
redis = "^5.0.4"
httpx = "^0.27.0"
qdrant-client = "^1.8.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = "^8.2.1"
mypy = "^1.10.0"
[tool.poetry.dev-dependencies]
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
